Removed redundant check for executionArn, added unhandled error check on the invoke handler and updated open api spec for both
